<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <!-- Game field. -->

    <SurfaceView
        android:id="@+id/game_surface"
        android:layout_width="240dp"
        android:layout_height="480dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        android:contentDescription="@string/game_surface_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Top level game controls. -->

    <Button
        android:id="@+id/button_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_new_game"
        app:layout_constraintStart_toEndOf="@+id/game_surface"
        app:layout_constraintTop_toBottomOf="@+id/level_label" />

    <Button
        android:id="@+id/button_pause_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:text="@string/button_pause_game"
        app:layout_constraintStart_toEndOf="@+id/game_surface"
        app:layout_constraintTop_toBottomOf="@+id/button_new_game" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/show_next_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/show_next_switch_text"
        android:textAllCaps="true"
        android:textColor="@color/blue_700"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/game_surface"
        app:layout_constraintTop_toBottomOf="@+id/button_pause_game" />

    <SurfaceView
        android:id="@+id/show_next_surface"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/show_next_surface_description"
        app:layout_constraintStart_toEndOf="@+id/game_surface"
        app:layout_constraintTop_toBottomOf="@+id/show_next_switch" />

    <!-- Main in game controls. -->

    <ImageButton
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue_700"
        android:contentDescription="@string/button_left"
        android:src="@drawable/ic_baseline_arrow_back_36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_rotate"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue_700"
        android:contentDescription="@string/button_rotate"
        android:src="@drawable/ic_baseline_rotate_left_36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_right"
        app:layout_constraintStart_toEndOf="@+id/button_left" />

    <ImageButton
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue_700"
        android:contentDescription="@string/button_right"
        android:src="@drawable/ic_baseline_arrow_forward_36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_rotate" />

    <ImageButton
        android:id="@+id/button_drop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/blue_700"
        android:contentDescription="@string/button_drop"
        android:src="@drawable/ic_baseline_arrow_downward_36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_rotate"
        app:layout_constraintStart_toEndOf="@+id/button_rotate" />

    <!-- Score and stats. -->

    <TextView
        android:id="@+id/score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/score_label"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:text="@string/initial_score"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/score_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/figures_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/figures_label"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/game_surface"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/figures_count"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/initial_score"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/figures_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lines_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lines_label"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/game_surface"
        app:layout_constraintTop_toBottomOf="@+id/figures_label" />

    <TextView
        android:id="@+id/lines_count"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/initial_score"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/lines_label"
        app:layout_constraintTop_toBottomOf="@+id/figures_count" />

    <TextView
        android:id="@+id/level_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/level_label"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/game_surface"
        app:layout_constraintTop_toBottomOf="@+id/lines_label" />

    <TextView
        android:id="@+id/level_number"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/initial_score"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/lines_label"
        app:layout_constraintTop_toBottomOf="@+id/lines_count" />

    <Spinner
        android:id="@+id/begin_level_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:popupBackground="@color/light_gray"
        app:layout_constraintStart_toEndOf="@+id/level_label"
        app:layout_constraintTop_toBottomOf="@+id/lines_count" />

</androidx.constraintlayout.widget.ConstraintLayout>